--- a/default/commands-misc.yml
+++ b/default/commands-misc.yml
@@ -35,6 +35,10 @@ commands:
       description: "Mostra todos os comandos disponíveis que eu posso executar, lembrando que isto só irá mostrar os comandos habilitados no servidor que você executou a ajuda!"
     choose:
       description: "Precisando de ajuda para escolher alguma coisa? Então deixe-me escolher para você!"
+      examples:
+        - "Sonic, Tails, Knuckles |-| Escolhe entre \"Sonic\", \"Tails\" ou \"Knuckles\""
+        - "Asriel Dreemurr, Chara Dreemurr |-| Escolhe entre \"Asriel Dreemurr\" ou \"Chara Dreemurr\" (mesmo que todos saibam que o Asriel é melhor)"
+        - "Shantae, Risky Boots |-| Escolhe entre \"Shantae\" e \"Risky Boots\""
       result: "Eu escolhi `{0}`!"
     ping:
       description: "Um comando de teste para ver se eu estou funcionando, recomendo que você deixe isto ligado para testar!"
