--- a/default/commands-roblox.yml
+++ b/default/commands-roblox.yml
@@ -21,3 +21,4 @@ commands:
       following: "Seguindo"
       followers: "Seguidores"
       friends: "Amigos"
+      favoriteGames: "Jogos Favoritos"
