--- a/default/items.yml
+++ b/default/items.yml
@@ -17,6 +17,7 @@ sets:
   devilMayCry: "Devil May Cry"
   leagueOfLegends: "League of Legends"
   adventureTime: "Hora de Aventura"
+  amongUs: "Among Us"
 profileDesigns:
   name: "Design para Perfil"
   defaultDark:
