--- a/default/commands-social.yml
+++ b/default/commands-social.yml
@@ -2,8 +2,12 @@ commands:
   social:
     youAreNotMarried: "A tua alma ainda não encontrou outra alma para passar o resto da vida com ela... Você só pode usar funcionalidades de pessoas casados após se {0} com alguém! {1}"
     profile:
-      profileshop: "Compre novos perfis em {0}"
       description: "Mostra o seu perfil!"
+      examples:
+        - "|-| Mostra o seu próprio perfil"
+        - "@Loritta |-| Veja o perfil da garota mais maravilhosa do Discord!"
+        - "390927821997998081 |-| Mostra o perfil de um usuário pelo ID"
+      profileshop: "Compre novos perfis em {0}"
       lorittaDescription: "Olá, eu me chamo Loritta (ou, como meus amigos próximos me chamam, \"Lori\") e sou apenas um simples bot brasileiro para o Discord com várias funções jamais vistas!"
       totalXP: "XP Total"
       guildXP: "XP no {0}"
@@ -20,10 +24,13 @@ commands:
       description: "Veja os usuários que venceram mais partidas do Bom Dia & Cia"
       wonMatches: "Venceu {0} vezes o Bom Dia & Cia"
     reputation:
+      description: "Dê reputação para outro usuário!"
+      examples:
+        - "@Loritta |-| Dá uma reputação para a pessoa que mais merece uma reputação no mundo todo!"
+        - "761931447207460864 |-| Dá uma reputação para um usuário pelo ID"
       reputationLink: "Quase pronto! Para dar a reputação, confirme ela em {0}"
       success: "{0} deu uma reputação para {1}, agora {5} possui **{2} reputações**! Quer dar uma reputação também? {3} {4}"
       invalidUser: "Usuário inválido!"
-      description: "Dê reputação para outro usuário!"
       repSelf: "Você não pode dar reputação para si mesmo, bobinho!"
       wait: "Você precisa esperar **{0}** antes de poder dar outra reputação!"
     divorce:
@@ -58,12 +65,19 @@ commands:
       sentReputationWithContent: "Reputação enviada para {0} com a mensagem: {1}"
     afk:
       description: "Irá ficar um tempo longe do teclado? Então ative o modo AFK para que todos saibam que você não poderá responder a mensagem!"
+      examples:
+        - "|-| Marca que você está fora do teclado e, ao te marcarem, irá aparecer que você está AFK"
+        - "almoço |-| Marca que você está fora do teclado e, ao te marcarem, irá aparecer que você está AFK almoçando"
+        - "cagando |-| Marca que você está fora do teclado e, ao te marcarem, irá aparecer que você está AFK cagando... ah, finalmente paz no banheiro!"
       afkOff: "Modo AFK desativado!"
       afkOn: "Modo AFK ativado! Para a sua conveniência, o modo AFK será automaticamente desativado quando você falar algo no chat! \U0001F609"
     background:
       description: "Que tal dar uma renovada no papel de parede do seu perfil?"
     editxp:
-      description: "Edita o XP de um usuário"
+      description: "Edita o XP de um usuário, caso você queira resetar o XP de todos os usuários, vá nas configurações no meu painel!"
+      examples:
+        - "@Loritta 1000 |-| Altera o XP da pessoa mais ativa do Brasil para 1000"
+        - "123170274651668480 69420 |-| Altera o XP de um usuário pelo ID para 69420 (nice)"
       moreThanZero: "XP precisa ser maior que 0!"
       success: "XP de {0} foi alterado com sucesso!"
     gender:
@@ -73,6 +87,9 @@ commands:
       successfullyChanged: "Gênero alterado com sucesso!"
     marry:
       description: "O amor está no ar! Case com a sua crush ou com a sua webnamorada! Cada casamento custa **7500 Sonhos** para cada um, e, todo o dia, você precisa pagar **250 Sonhos** para manter o casamento!"
+      examples:
+        - "@Loritta |-| Casa com a pessoa mais amorosa do mundo! Ah, mas nem tente... eu só gosto de você como amigx e o exemplo só existe para ter um exemplo de como casar alguém pela menção"
+        - "160105994217586689 |-| Casa com um usuário pelo ID"
       cantMarryYourself: "Você não pode se casar com você mesmo, bobinho!"
       marryLoritta: "Eu nem te amo para querer casar com você, e além do mais, eu nem tenho idade para casar."
       alreadyMarried: "Você já está casado com outra pessoa! Use `{0}divorciar` antes de se casar com outra pessoa!"
@@ -83,4 +100,7 @@ commands:
       description: "Veja o ranking do servidor atual!"
     aboutme:
       description: "Altere o \"Sobre Mim\" no comando de perfil!"
+      examples:
+        - "Eu gosto da Loritta! |-| Altera o seu \"Sobre Mim\" para idolatrar a pessoa mais incrível que existe no universo"
+        - "Olá, eu sou uma pessoa muito legal que gosta de gatinhos fofos |-| Altera o seu \"Sobre Mim\" para algo que não infla o meu ego"
       changed: "Sua mensagem de perfil foi alterada para `{0}`!"
