--- a/default/commands-utils.yml
+++ b/default/commands-utils.yml
@@ -2,10 +2,24 @@ commands:
   utils:
     calc:
       description: "Calcula uma expressão aritmética"
+      examples:
+        - "2 + 2 |-| Calcula quanto é 2 + 2 (adição)"
+        - "40 - 10 |-| Calcula quanto é 40 - 10 (subtração)"
+        - "5 * 5 |-| Calcula quanto é 5 * 5 (multiplicação)"
+        - "100 / 5 |-| Calcula quanto é 100 / 5 (divisão)"
+        - "(sqrt(10) * 4) / 12 |-| Calcula quanto é (sqrt(10) * 4) / 12 (raiz quadrada, multiplicação e divisão)"
+        - "cos(0) |-| Calcula quanto é o cosseno de 0"
+        - "sin(90) |-| Calcula quanto é o seno de 90"
+        - "tan(45) |-| Calcula quanto é a tangente de 45"
+        - "10 % 2 |-| Calcula quanto é o resto de 10 ao dividir por 3 (módulo)"
       invalid: "Desculpe, mas eu não acho que `{0}` seja uma expressão aritmética... Ou talvez seja a minha burrice, afinal, eu estou perdendo o meu tempo no Discord em vez de prestar atenção na aula."
       result: "**Resultado:** `{0}`"
     anagram:
       description: "Crie um anagrama de uma palavra!"
+      examples:
+        - "Loritta |-| Cria um anagrama usando a palavra \"Loritta\""
+        - "kk eae men |-| Cria um anagrama usando a frase \"kk eae men\""
+        - "Asriel Dreemurr |-| Cria um anagrama usando a frase \"Asriel Dreemurr\""
       result: "**O seu anagrama é...** `{0}`"
       stats: "A palavra `{0}` possui **{1} anagramas diferentes**!"
     colorinfo:
@@ -18,8 +32,10 @@ commands:
     remindme:
       description: "Precisa lembrar de dar comida para o dog? Talvez você queira marcar um lembrete para que no futuro você possa ver se você conseguir fazer todos os seus \"Life Goals\" deste ano? Então crie um lembrete!"
       examples:
-        - "dar comida para o dog"
-        - "lista"
+        - "dar comida para o dog |-| Cria um lembrete para você dar a comida para o seu dog, eu irei perguntar quando eu precisarei te lembrar depois de usar o comando"
+        - "pegar daily |-| Cria um lembrete para você não esquecer de pegar o seu prêmio diário de sonhos"
+        - "dar reputação |-| Cria um lembrete para você não esquecer de dar reputação para o seu amigx"
+        - "lista |-| Mostra a lista de lembretes"
       cancel: "Lembrete cancelado!"
       success: "Eu irei te lembrar em **{0}/{1}/{2,number,#}** às **{3}:{4}**!"
       setHour: "Quando você irá querer que eu te avise deste lembrete? (`1 hora`, `5 minutos`, `12:00 11/08/2018`, etc)"
@@ -30,8 +46,12 @@ commands:
       reminderRemoved: "Lembrete removido!"
     dicio:
       description: "Procure o significado de uma palavra no dicionário!"
+      examples:
+        - "sonho |-| Procura o significado de \"sonho\" no dicionário"
     encode:
       description: "Precisando encriptografar algo? Querendo transformar o seu texto em outra coisa? Então codifique ele! Codificações suportadas: {0}"
+      examples:
+        - "sha256 Loritta é muito fofa! |-| Criptografa \"Loritta é muito fofa!\" em SHA256"
       originalText: "Texto Original"
       encodedText: "Texto Codificado"
     knowyourmeme:
@@ -39,10 +59,17 @@ commands:
       noDescription: "Sem descrição..."
     money:
       description: "Transforma o valor de uma moeda em outra moeda. (Por exemplo: Ver quanto está valendo o dólar em relação ao real)"
+      examples:
+        - "USD BRL |-| Mostra o valor atual do dólar (USD) em reais (BRL)"
+        - "USD BRL 9.99 |-| Mostra o valor atual de 9,99 dólares (USD) em reais (BRL). Olha, é o preço do Discord Nitro!"
+        - "EUR USD |-| Mostra o valor atual do euro (EUR) em dólares (USD)"
       invalidCurrency: "`{0}` não é uma moeda válida! \U0001F4B8\n**Moedas válidas:** {1}"
       converted: "**{0} {1} para {2}**: {3} {2}"
     morse:
       description: "Codifica/Decodifica uma mensagem em código morse"
+      examples:
+        - "Loritta |-| Converte \"Loritta\" para código morse"
+        - ".-.. --- .-. .. / ..-. --- --- ..-.  |-| Converte de código morse para texto"
       failUnknownCharacters: "Eu não consegui transformar a sua mensagem para código morse... Talvez você tenha colocado apenas caracteres que não existem em código morse!"
       toFrom: "Morse para Texto"
       fromTo: "Texto para Morse"
