--- a/default/commands-moderation.yml
+++ b/default/commands-moderation.yml
@@ -91,7 +91,7 @@ commands:
     unlock:
       description: "Desbloqueia usuários de falarem no canal de texto onde o comando foi executado"
       allowed: "Canal desbloqueado com sucesso! Use `{0}lock` para travar!"
-      channelAlreadyIsUnlocked: "Este canal já está desbloquado! Use `{0}lock` para travar!"
+      channelAlreadyIsUnlocked: "Este canal já está desbloqueado! Use `{0}lock` para travar!"
     unmute:
       description: "Remove o silenciamento de um usuário do seu servidor"
       punishAction: "Retirado o Silenciamento"
